<resources>
    <string name="app_name">动效视频生成器</string>
    <string name="select_theme">选择主题</string>
    <string name="upload_image">上传图片</string>
    <string name="enter_prompt">输入描述文案</string>
    <string name="generate_video">生成视频</string>
    <string name="select_festival">选择节气/节日</string>
    <string name="spring_festival">春节</string>
    <string name="lantern_festival">元宵节</string>
    <string name="qingming_festival">清明节</string>
    <string name="dragon_boat_festival">端午节</string>
    <string name="mid_autumn_festival">中秋节</string>
    <string name="national_day">国庆节</string>
    <string name="new_year">元旦</string>
    <string name="valentines_day">情人节</string>
    <string name="women_day">妇女节</string>
    <string name="april_fools">愚人节</string>
    <string name="may_day">劳动节</string>
    <string name="childrens_day">儿童节</string>
    <string name="teachers_day">教师节</string>
    <string name="halloween">万圣节</string>
    <string name="christmas">圣诞节</string>
    <string name="lichun">立春</string>
    <string name="yushui">雨水</string>
    <string name="jingzhe">惊蛰</string>
    <string name="chunfen">春分</string>
    <string name="qingming">清明</string>
    <string name="guyu">谷雨</string>
    <string name="lixia">立夏</string>
    <string name="xiaoman">小满</string>
    <string name="mangzhong">芒种</string>
    <string name="xiazhi">夏至</string>
    <string name="xiaoshu">小暑</string>
    <string name="dashu">大暑</string>
    <string name="liqiu">立秋</string>
    <string name="chushu">处暑</string>
    <string name="baihu">白露</string>
    <string name="qiufen">秋分</string>
    <string name="hanlu">寒露</string>
    <string name="shuangjiang">霜降</string>
    <string name="lidong">立冬</string>
    <string name="xiaoxue">小雪</string>
    <string name="daxue">大雪</string>
    <string name="dongzhi">冬至</string>
    <string name="xiaohan">小寒</string>
    <string name="dahan">大寒</string>
    <string name="theme_romantic">浪漫温馨</string>
    <string name="theme_cute">可爱萌趣</string>
    <string name="theme_retro">复古怀旧</string>
    <string name="theme_minimal">简约清新</string>
    <string name="theme_dynamic">动感活力</string>
    <string name="theme_elegant">优雅古典</string>
    <string name="theme_mysterious">神秘奇幻</string>
    <string name="theme_warm">温暖治愈</string>
    <string name="image_upload_hint">点击上传图片或拍照</string>
    <string name="prompt_hint">输入您想要的视频描述...</string>
    <string name="video_generating">正在生成视频...</string>
    <string name="video_completed">视频生成完成</string>
    <string name="preview_video">预览视频</string>
    <string name="save_video">保存视频</string>
    <string name="share_video">分享视频</string>
    <string name="please_upload_image">请先上传图片</string>
    <string name="please_enter_prompt">请输入描述文案</string>
    <string name="please_select_theme">请选择主题</string>
    <string name="error_generate_video">视频生成失败，请重试</string>
    <string name="video_saved_successfully">视频保存成功</string>
</resources>